--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <!-- ===============================================-->
   <!--    Document Title-->
   <!-- ===============================================-->
-  <title>WooLanding | Landing, Corporate &amp; Business Templatee</title>
+  <title>Limboteams | Passion for Software </title>
 
 
   <!-- ===============================================-->
@@ -19,7 +19,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon-32x32.png">
   <link rel="manifest" href="assets/img/favicons/manifest.json">
   <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png">
   <meta name="theme-color" content="#ffffff">
@@ -47,22 +47,13 @@
           aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto ms-lg-4 ms-xl-7 border-bottom border-lg-bottom-0 pt-2 pt-lg-0">
-            <li class="nav-item"><a class="nav-link fw-medium active" aria-current="page" href="#">Sell</a></li>
-            <li class="nav-item"><a class="nav-link fw-medium" href="#">Inicio</a></li>
-            <li class="nav-item"><a class="nav-link fw-medium" href="#">Community </a></li>
-            <li class="nav-item"><a class="nav-link fw-medium" href="#">Develop</a></li>
-            <li class="nav-item"><a class="nav-link fw-medium" href="#">Resources </a></li>
+            <li class="nav-item"><a class="nav-link fw-medium active" aria-current="page" href="#">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link fw-medium" href="#">Nosotros</a></li>
+            <li class="nav-item"><a class="nav-link fw-medium" href="#">Servicios</a></li>
           </ul>
-          <form class="d-flex py-3 py-lg-0"><a class="btn btn-link text-1000 fw-medium order-1 order-lg-0 me-lg-2"
-              href="#" role="button">Log In</a><a class="btn btn-info order-0 me-1" href="#" role="button">Get
-              Started</a>
+          <form class="d-flex py-3 py-lg-0">
+            <a class="btn btn-info order-0 me-1" href="#" role="button">Contáctanos</a>
             <div class="d-flex align-items-center ps-lg-3 order-3">
-              <svg class="bi bi-search" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#272D4E"
-                viewBox="0 0 16 16">
-                <path
-                  d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z">
-                </path>
-              </svg>
             </div>
           </form>
         </div>
@@ -79,12 +70,12 @@
           <div class="col-lg-6 col-md-5 order-md-1 pt-8"><img class="img-fluid" src="assets/img/gallery/hero.png"
               alt="" /></div>
           <div class="col-md-7 col-lg-6 text-center text-md-start pt-5 pt-md-9">
-            <h1 class="display-2 fw-bold fs-4 fs-md-5 fs-xl-6">Building exactly the <br />eCommerce website you want.
+            <h1 class="display-2 fw-bold fs-4 fs-md-5 fs-xl-6">Limboteams,<br />Passion for software.
             </h1>
-            <p class="mt-3 mb-4">WooCommerce is a customizable, open-source eCommerce platform built on WordPress.Get
-              started quickly and make your way.</p><a class="btn btn-lg btn-info rounded-pill me-2" href="#"
-              role="button">Start a New Store </a><span> or </span><a class="btn btn-link ps-1 ps-md-4 ps-lg-1" href="#"
-              role="button"> Customize &amp; Extend ›</a>
+            <p class="mt-3 mb-4">Mediante nuestra propuesta integral, nuestros desarrolladores encuentran un lugar de
+              optimo crecimiento. Convirtiendonos en el complemento ideal para alcanzar el 100% sus funcionabilidades.
+            </p>
+            <a class="btn btn-lg btn-info rounded-pill me-2" href="#" role="button">Ver más </a>
           </div>
         </div>
       </div>
@@ -136,7 +127,7 @@
 
     <div class="shapeup">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
-        <path fill="#7854F7" fill-opacity="1"
+        <path fill="#FF5A15" fill-opacity="1"
           d="M0,64L120,69.3C240,75,480,85,720,85.3C960,85,1200,75,1320,69.3L1440,64L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z">
         </path>
       </svg>
@@ -174,7 +165,7 @@
     </section>
     <div class="shapedown">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
-        <path fill="#7854F7" fill-opacity="1"
+        <path fill="#FF5A15" fill-opacity="1"
           d="M0,256L120,250.7C240,245,480,235,720,234.7C960,235,1200,245,1320,250.7L1440,256L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z">
         </path>
       </svg>
@@ -339,10 +330,6 @@
             </div>
           </div>
         </div>
-        <div class="row flex-center">
-          <div class="col-auto py-4"><a href="#"><img class="img-fluid" src="assets/img/icons/f-logo.png" alt="" /></a>
-          </div>
-        </div>
         <hr class="opacity-25" />
         <div class="row justify-content-lg-around">
           <div class="col-6 col-sm-4 col-lg-auto mb-3 order-0">
@@ -351,24 +338,6 @@
               <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">About</a></li>
               <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Team</a></li>
               <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Work With Us</a></li>
-            </ul>
-          </div>
-          <div class="col-6 col-sm-4 col-lg-auto mb-3 order-4 order-lg-1">
-            <h6 class="text-light lh-lg text-uppercase"> Woocommerce </h6>
-            <ul class="list-unstyled mb-md-4 mb-lg-0">
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Features</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Payments </a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Marketing</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Shipping</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Extension</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Store</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">eCommerce blog</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Development blog</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!"> Ideas board</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Mobile App</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Community</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Style Guide</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Email Newsletter</a></li>
             </ul>
           </div>
           <div class="col-6 col-sm-4 col-lg-auto mb-3 order-1 order-lg-2">
@@ -387,19 +356,15 @@
               <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Customizations</a></li>
               <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Support Policy</a></li>
               <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Contact </a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">COVID-19 Resources</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Privacy Notice for </a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">California Users</a></li>
             </ul>
           </div>
           <div class="col-6 col-sm-4 col-lg-auto mb-3 order-2 order-lg-4">
             <h6 class="text-light lh-lg text-uppercase">We recommend</h6>
             <ul class="list-unstyled mb-md-4 mb-lg-0">
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">WooExperts</a></li>
+              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Darxprex</a></li>
               <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Hosting Solutions</a></li>
               <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Pre-sales FAQ</a></li>
               <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Success Stories</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Design Feedback Group</a>
               </li>
             </ul>
           </div>
@@ -422,7 +387,7 @@
           <div class="col-sm-12 col-md-3 text-md-start px-md-0 pt-md-2 text-center">
             <ul class="list-unstyled list-inline">
               <li class="list-inline-item mr-3"><a class="text-decoration-none" href="#!">
-                  <svg class="bi bi-twitter" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#272D4E"
+                  <svg class="bi bi-linkedink" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#272D4E"
                     viewBox="0 0 16 16">
                     <path
                       d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z">
@@ -454,22 +419,7 @@
                   </svg></a></li>
             </ul>
           </div>
-          <div class="col-sm-12 col-md-6 px-md-0 text-md-center order-1 order-md-0">
-            <div class="text-400 text-center">
-              <p class="mb-0">This template is made with &nbsp;
-                <svg class="bi bi-suit-heart-fill" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                  fill="#7854F7" viewBox="0 0 16 16">
-                  <path
-                    d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z">
-                  </path>
-                </svg>&nbsp;by&nbsp;<a class="text-1000" href="https://themewagon.com/" target="_blank">ThemeWagon </a>
-              </p>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-3 text-center text-md-end"> <a href="#"><img class="img-fluid"
-                src="assets/img/icons/pf-logo.png" height="14" alt="" /></a></div>
-        </div>
-      </div><!-- end of .container-->
+        </div><!-- end of .container-->
 
     </section>
     <!-- <section> close ============================-->
