textos y ajustes graficos

--- a/public/index.html
+++ b/public/index.html
@@ -89,32 +89,37 @@
       <div class="container">
         <div class="row flex-center">
           <div class="col-auto text-center my-4">
-            <h1 class="display-3 fw-bold">Your eCommerce<br /><span>made simple</span></h1>
+            <h1 class="display-3 fw-bold">Nuestra<br /><span>comunidad</span></h1>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4 mb-5 mb-md-0"><img class="img-fluid shadow-sm" src="assets/img/gallery/feature-1.png"
               alt="" />
             <div class="mt-3 text-center text-md-start">
-              <h4 class="display-6 fs-2 fs-lg-3 fw-bold">All You Need to Start</h4>
-              <p class="mb-0">Add WooCommerce plugin to any WordPress site and set up a new store in minutes.</p><a
-                class="btn btn-link ps-0" href="#" role="button"> Ecommerce Wordpress ›</a>
+              <h4 class="display-6 fs-2 fs-lg-3 fw-bold">Valores</h4>
+              <p class="mb-0">
+                Los valores de una comunidad son aquellos criterios que comparten y ponen en práctica los miembros de
+                una sociedad. Este tipo de valores nos sirven para convivir de forma respetuosa y en sintonía entre
+                todos los
+                miembros que componen el equipo.</p>
             </div>
           </div>
           <div class="col-md-4 mb-5 mb-md-0"><img class="img-fluid shadow-sm" src="assets/img/gallery/feature-2.png"
               alt="" />
             <div class="mt-3 text-center text-md-start">
-              <h4 class="display-6 fs-2 fs-lg-3 fw-bold">Customize and Extend</h4>
-              <p class="mb-0">From subscriptions to gym classes to luxury cars, WooCommerce is fully customizable.</p><a
-                class="btn btn-link ps-0" href="#" role="button"> Browse Extensions › </a>
+              <h4 class="display-6 fs-2 fs-lg-3 fw-bold">Misión</h4>
+              <p class="mb-0">Nuestra misión es que nuestros desarrolladores, diseñadores, equipo de managers y más,
+                encuentren un lugar de óptimo crecimiento y seamos un medio donde quieran participar, aprender y sumar
+                esa experiencia a nuevos integrantes.
+              </p>
             </div>
           </div>
           <div class="col-md-4 mb-5 mb-md-0"><img class="img-fluid shadow-sm" src="assets/img/gallery/feature-3.png"
               alt="" />
             <div class="mt-3 text-center text-md-start">
-              <h4 class="display-6 fs-2 fs-lg-3 fw-bold">Active Community</h4>
-              <p class="mb-0">WooCommerce is one of the fastest-growing eCommerce communities. </p><a
-                class="btn btn-link ps-0" href="#" role="button"> Check our Forums ›</a>
+              <h4 class="display-6 fs-2 fs-lg-3 fw-bold">Visión</h4>
+              <p class="mb-0">Nuestra visión es proporcionar las herramientas necesarias para ese aprendizaje y mediante
+                la ejecución de proyectos guiado por equipo experimentado a nuevos integrantes. </p>
             </div>
           </div>
         </div>
@@ -127,7 +132,7 @@
 
     <div class="shapeup">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
-        <path fill="#FF5A15" fill-opacity="1"
+        <path fill="#111" fill-opacity="1"
           d="M0,64L120,69.3C240,75,480,85,720,85.3C960,85,1200,75,1320,69.3L1440,64L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z">
         </path>
       </svg>
@@ -143,11 +148,11 @@
           <div class="col-12 col-md-4 mb-4"><img class="img-fluid rounded-3 shadow-lg image-up"
               src="assets/img/gallery/about-2.png" alt="" /></div>
           <div class="col-12 col-md-8 text-md-start" style="max-width: 460px;">
-            <h3 class="fw-medium text-light"> Develop <br />Without Limits</h3>
-            <p class="text-light">WooCommerce is developer friendly, too. Built with a REST API, WooCommerce is scalable
-              and can integrate with virtually any service. Design a complex store from scratch, extend a store for a
-              client, or simply add a single product to a WordPress site—your store, your way.</p><a
-              class="btn btn-lg btn-success rounded-pill" href="#">Read the Documentation</a>
+            <h3 class="fw-medium text-light"> Como trabajamos</h3>
+            <p class="text-light">Trabajamos bajo una metodologia modular, tanto nuestros objetivos como nuestros
+              horarios estan organizados en modulos seccionados para que todo se ejecute de la manera mas comoda y
+              eficiente, no solo hablamos de trabajo, tenemos tiempos estipulados para comidas, meriendas y recreacion.
+              Todo esto con el fin de que cada miembro este totalmente enfocado en su jornada de desarrollo.</p>
           </div>
         </div>
         <div class="row flex-center">
@@ -199,9 +204,9 @@
                     <!--/.bg-holder-->
 
                     <div class="card-body z-index-1">
-                      <p class="card-text fs-2 text-center">No other eCommerce platform allows people to start for free
-                        and grow their store as their business grows. More importantly, WooCommerce doesn't charge you a
-                        portion of your profits as your business grows!</p>
+                      <p class="card-text fs-2 text-center"> Nos consideramos una comunidad, creemos que nuestra
+                        principal habilidad es la capacidad de avanzar juntos,
+                        creemos en el esfuerzo e interes como habilidades principales de cada posible miembro</p>
                     </div>
                   </div>
                 </div>
@@ -213,9 +218,8 @@
                     <!--/.bg-holder-->
 
                     <div class="card-body z-index-1">
-                      <p class="card-text fs-2 text-center">WooCommerce doesn't charge you a portion of your profits as
-                        your business grows! No other eCommerce platform allows people to start for free and grow their
-                        store as their business grows. More importantly</p>
+                      <p class="card-text fs-2 text-center">Apuntamos a la excelencia en nuestro trabajo, creemos
+                        fielmente en cada cliente que cree en nosotros y retribuimos la confianza con esfuerzo.</p>
                     </div>
                   </div>
                 </div>
@@ -227,9 +231,9 @@
                     <!--/.bg-holder-->
 
                     <div class="card-body z-index-1">
-                      <p class="card-text fs-2 text-center">More importantly, WooCommerce doesn't charge you a portion
-                        of your profits as your business grows! No other eCommerce platform allows people to start for
-                        free and grow their store as their business grows</p>
+                      <p class="card-text fs-2 text-center">Nos importa cada miembro de nuestros equipos. Por lo que uno
+                        de nuestros valores principales es que disfruten de la experiencia que brinda limboteam, junto a
+                        lugares de recreacion, comidas y meriendas durante sus jornadas</p>
                     </div>
                   </div>
                 </div>
