--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
             <div class="mt-3 text-center text-md-start">
               <h4 class="display-6 fs-2 fs-lg-3 fw-bold">Valores</h4>
               <p class="mb-0">
-                Los valores de una comunidad son aquellos criterios que comparten y ponen en práctica los miembros de
+                Loss valores de una comunidad son aquellos criterios que comparten y ponen en práctica los miembros de
                 una sociedad. Este tipo de valores nos sirven para convivir de forma respetuosa y en sintonía entre
                 todos los
                 miembros que componen el equipo.</p>
