cambios de textos

--- a/public/index.html
+++ b/public/index.html
@@ -148,22 +148,30 @@
           <div class="col-12 col-md-4 mb-4"><img class="img-fluid rounded-3 shadow-lg image-up"
               src="assets/img/gallery/about-2.png" alt="" /></div>
           <div class="col-12 col-md-8 text-md-start" style="max-width: 460px;">
-            <h3 class="fw-medium text-light"> Como trabajamos</h3>
-            <p class="text-light">Trabajamos bajo una metodologia modular, tanto nuestros objetivos como nuestros
-              horarios estan organizados en modulos seccionados para que todo se ejecute de la manera mas comoda y
-              eficiente, no solo hablamos de trabajo, tenemos tiempos estipulados para comidas, meriendas y recreacion.
-              Todo esto con el fin de que cada miembro este totalmente enfocado en su jornada de desarrollo.</p>
+            <h3 class="fw-medium text-light">Porque Limbo?</h3>
+            <p class="text-light">Comencemos lo que define el Limbo; Este se refiere cuando una persona está
+              desconectada de la realidad que lo rodea o un lugar misterioso donde acontecen cosas inexplicables..
+              ¿Qué podría ser más misterioso que la programación y las personas que desarrolla?
+              Ante el mundo donde todo parecía ser normal, llegaron los nómadas digitales a cambiar las perspectivas y
+              mostrarnos que con su cabeza al revés y estando en el limbo pueden desarrollar páginas increíbles,
+              aplicaciones dedicadas al usuario y su buena experiencia.
+            </p>
           </div>
         </div>
         <div class="row flex-center">
           <div class="col-12 col-md-4 order-0 order-md-1"><img class="img-fluid rounded-3 shadow-lg image-down"
               src="assets/img/gallery/about-1.png" alt="" /></div>
           <div class="col-12 col-md-8 text-center text-md-start order-1 order-md-0" style="max-width: 460px;">
-            <h3 class="fw-medium text-light">Know our<br />Global Community</h3>
-            <p class="text-light">WooCommerce is one of the fastest-growing eCommerce communities. We’re proud that the
-              helpfulness of the community and a wealth of online resources are frequently cited as reasons our users
-              love it. There are 80+ meetups worldwide!</p><a class="btn btn-lg btn-success rounded-pill" href="#">Read
-              the Documentation</a>
+            <h3 class="fw-medium text-light"> Como trabajamos</h3>
+            <p class="text-light">Trabajamos bajo una metodologia modular, tanto nuestros objetivos como nuestros
+              horarios estan organizados en modulos seccionados para que todo se ejecute de la manera mas comoda y
+              eficiente, no solo hablamos de trabajo, tenemos tiempos estipulados para comidas, meriendas y recreacion.
+              Todo esto con el fin de que cada miembro este totalmente enfocado en su jornada de desarrollo. <br>
+              Limboteams nace con la intención de formar un equipo que crea fervientemente en el objetivo de sumar más
+              personas en el limbo y quieran crear, organizar, desarrollar, diseñar, aprender, enseñar, amar esta pasión
+              con la cual se inició este proyecto.
+            </p>
+
           </div>
         </div>
       </div>
@@ -256,9 +264,9 @@
       <div class="container">
         <div class="row flex-center">
           <div class="col-xl-5 text-center mb-5 z-index-1">
-            <h1 class="display-3 fw-bold fs-4 fs-md-6">Supported by real people</h1>
-            <p>Our team of Happiness Engineers works remotely from 58 countries providing customer support across
-              multiple time zones.</p>
+            <h1 class="display-3 fw-bold fs-4 fs-md-6">Apoyado por personas reales</h1>
+            <p>Limboteams nace para sacar adelante proyectos que están en el limbo y que aún no son tangibles, proyectos
+              que suman al cliente para ver su idea plasmada en realidad.</p>
           </div>
         </div>
       </div>
@@ -280,12 +288,13 @@
         <div class="card py-4 border-0 rounded-0 bg-primary">
           <div class="card-body">
             <div class="row flex-center">
-              <div class="col-xl-9 d-flex justify-content-center mb-3 mb-xl-0">
-                <h2 class="text-light fw-bold">WooCommerce - the most customizable eCommerce<br />platform for building
-                  your online business.</h2>
+              <div class="col-xl-6 d-flex justify-content-center mb-3 mb-xl-0">
+                <h2 class="text-light fw-bold">Nuestro equipo cada dia crece más;<br /> Sé parte de este maravilloso
+                  Limbo.
+                </h2>
               </div>
-              <div class="col-xl-3 text-center"><a class="btn btn-lg btn-outline-light rounded-pill" href="#">GET
-                  STARTED</a></div>
+              <div class="col-xl-6 text-center"><a class="btn btn-lg btn-outline-light rounded-pill" href="#">Enviar
+                  CV</a></div>
             </div>
           </div>
         </div>
@@ -335,44 +344,6 @@
           </div>
         </div>
         <hr class="opacity-25" />
-        <div class="row justify-content-lg-around">
-          <div class="col-6 col-sm-4 col-lg-auto mb-3 order-0">
-            <h6 class="text-light lh-lg text-uppercase">Who we Are</h6>
-            <ul class="list-unstyled mb-md-4 mb-lg-0">
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">About</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Team</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Work With Us</a></li>
-            </ul>
-          </div>
-          <div class="col-6 col-sm-4 col-lg-auto mb-3 order-1 order-lg-2">
-            <h6 class="text-light lh-lg text-uppercase">Other products </h6>
-            <ul class="list-unstyled mb-md-4 mb-lg-0">
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Storefront</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">WooSlider</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Sensei</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Sensei Extensions</a></li>
-            </ul>
-          </div>
-          <div class="col-6 col-sm-4 col-lg-auto mb-3 order-3 order-lg-3">
-            <h6 class="text-light lh-lg text-uppercase">Support</h6>
-            <ul class="list-unstyled mb-md-4 mb-lg-0">
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Documentation</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Customizations</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Support Policy</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Contact </a></li>
-            </ul>
-          </div>
-          <div class="col-6 col-sm-4 col-lg-auto mb-3 order-2 order-lg-4">
-            <h6 class="text-light lh-lg text-uppercase">We recommend</h6>
-            <ul class="list-unstyled mb-md-4 mb-lg-0">
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Darxprex</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Hosting Solutions</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Pre-sales FAQ</a></li>
-              <li class="lh-lg"><a class="text-light fs--1 text-decoration-none" href="#!">Success Stories</a></li>
-              </li>
-            </ul>
-          </div>
-        </div>
       </div><!-- end of .container-->
 
     </section>
