--- a/public/index.html
+++ b/public/index.html
@@ -279,13 +279,11 @@
       </div>
     </section>
     <section class="py-0">
-      <div class="bg-holder z-index-2"
-        style="background-image:url(assets/img/illustrations/cta-bg.png);background-position:bottom right;background-size:61px 60px;margin-top:15px;margin-right:15px;margin-left:-58px;">
-      </div>
+
       <!--/.bg-holder-->
 
       <div class="container-fluid px-0">
-        <div class="card py-4 border-0 rounded-0 bg-primary">
+        <div class="card py-2 border-0 rounded-0 bg-primary">
           <div class="card-body">
             <div class="row flex-center">
               <div class="col-xl-6 d-flex justify-content-center mb-3 mb-xl-0">
@@ -293,7 +291,7 @@
                   Limbo.
                 </h2>
               </div>
-              <div class="col-xl-6 text-center"><a class="btn btn-lg btn-outline-light rounded-pill" href="#">Enviar
+              <div class="col-xl-6 text-center"><a class="btn btn-cv btn-outline-light rounded-pill" href="#">Enviar
                   CV</a></div>
             </div>
           </div>
