--- a/public/index.html
+++ b/public/index.html
@@ -162,12 +162,9 @@
           <div class="col-12 col-md-4 order-0 order-md-1"><img class="img-fluid rounded-3 shadow-lg image-down"
               src="assets/img/gallery/about-1.png" alt="" /></div>
           <div class="col-12 col-md-8 text-center text-md-start order-1 order-md-0" style="max-width: 460px;">
-            <h3 class="fw-medium text-light"> Como trabajamos</h3>
-            <p class="text-light">Trabajamos bajo una metodologia modular, tanto nuestros objetivos como nuestros
-              horarios estan organizados en modulos seccionados para que todo se ejecute de la manera mas comoda y
-              eficiente, no solo hablamos de trabajo, tenemos tiempos estipulados para comidas, meriendas y recreacion.
-              Todo esto con el fin de que cada miembro este totalmente enfocado en su jornada de desarrollo. <br>
-              Limboteams nace con la intención de formar un equipo que crea fervientemente en el objetivo de sumar más
+            <h3 class="fw-medium text-light"> Limboteams</h3>
+            <p class="text-light">
+              Nace con la intención de formar un equipo que crea fervientemente en el objetivo de sumar más
               personas en el limbo y quieran crear, organizar, desarrollar, diseñar, aprender, enseñar, amar esta pasión
               con la cual se inició este proyecto.
             </p>
